# homeserver

./: .env  .gitattributes  .gitignore  .gitmodules  CLAUDE.md  Dockerfile.danteb.com  Dockerfile.staticsite  Dockerfile.sveltekit  FUTURE.md  README.md  WIDGET_API_KEYS.md  accounts.conf.example  deploy-update.sh  docker-compose.yml  recyclarr.yml  services.yaml  settings.yaml  setup.sh  widgets.yaml
.claude/: settings.json  settings.local.json
.github/: copilot-instructions.md  dependabot.yml
aerc/: .gitignore  accounts.conf.example  aerc.conf
docker/: CLAUDE.md  Dockerfile.bmc-monitor  README.md  bmc-ip-monitor.sh  compose.ai.yml  compose.auth.yml  compose.core.yml  compose.dashboards.yml  compose.downloads.yml  compose.gaming.yml  compose.geo.yml  compose.git.yml  compose.immich.yml  compose.interview.yml  compose.knowledge.yml  compose.matrix.yml  compose.mcp.yml  compose.media.yml  compose.monitoring.yml  compose.nextcloud.yml  compose.romm.yml  compose.searxng.yml  compose.starr.yml  compose.utilities.yml  compose.websites.yml  docker-compose.yml  port-sync.sh  sample.env
docker/dockerfiles/mcp-idp/: .gitignore  Dockerfile  README.md  pyproject.toml
docker/dockerfiles/mcp-idp/mcp_idp/: __init__.py  __main__.py  config.py  keys.py  security.py  server.py  storage.py
docker/dockerfiles/mcp-idp/mcp_idp/endpoints/: __init__.py  authorize.py  discovery.py  health.py  jwks.py  register.py  revoke.py  token.py
docker/dockerfiles/mcp-idp/mcp_idp/templates/: consent.html
docker/dockerfiles/mcp-idp/tests/: conftest.py  test_e2e.py  test_main_socket.py
(+169 files in other folders)
