[project]
name = "mcp-idp"
version = "0.1.0"
description = "Tiny single-user OIDC IdP with Dynamic Client Registration for MCP authorization."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "starlette>=0.40,<2",
    "uvicorn>=0.30,<1",
    "joserfc>=1.0,<2",
    "aiosqlite>=0.20,<1",
    "jinja2>=3.1,<4",
    "cryptography>=42",
    "python-multipart>=0.0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "httpx>=0.28,<1",
    "ruff>=0.6",
]

[project.scripts]
mcp-idp = "mcp_idp.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["mcp_idp*"]

[tool.setuptools.package-data]
mcp_idp = ["templates/*.html"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
